--- a/index.html
+++ b/index.html
@@ -1,2 +1,54 @@
-<h2>Hello World!</h2>
-<p>Meu nome é Matteo!</p>
+<!DOCTYPE HTML>
+<html>
+  <style>
+    h3 {
+      color: #B22222;
+    }
+  </style>
+  <head>
+  </head>
+  <body>
+    <h1 style="color: #808080;">Matteo K. F. Giuliani</h1>
+    <img src="https://www.nasa.gov/sites/default/files/styles/image_card_4x3_ratio/public/thumbnails/image/wff-2018-076-002.jpg"
+    alt="foguete sendo lancado">
+    <h2>Esse site é onde mostro como entrar em contato comigo e o que aprendi.</h2>
+    <p>Estou estudando HTML5 no <a href="freecodecamp.org" target="_blank">freecodecamp.org</a>, e aprendi algumas tags(Ex:h1, h2, p, img, input, a).
+        Mas se você quiser me contratar para mecher no código do seu site preencha isto:</p>
+    <form action="">
+      <input type="text" required>:Seu nome</input>
+      <br />
+      <input type="text" required>:Seu e-mail</input>
+      <br />
+      <input type="text" required>:Seu telefone</input>
+      <br />
+      <input type="text" placeholder="Escreva aqui" required>:Me conte sobre você e site</input>
+      <button type="submit">Enviar</button>
+    </form>
+    <p>Além disso sou professor particular.</p>
+    <h3>Se quiser ter aulas comigo, preencha isto:</h3>
+    <form action="">
+      <input type="text" placeholder="Coloque aqui" required>Nome</input>
+      <br />
+      <br />
+      <input type="text" required>:e-mail</input>
+      <h3>Qual o seu ano?<h3>
+      <label>
+        <input name="ano" type="radio" value="fundamental I">E. Fundamental I
+      </label>
+      <label>
+        <input name="ano" type="radio" value="fundamental II">E. Fundamental II
+      </label>
+      <label>
+        <input name="ano" type="radio" value="medio">E. Medio
+      </label>
+      <br />
+      <br />
+      <input type="text">Descreva voce</input>
+      <br />
+      <input type="text">:De onde você é?</input>
+      <br />
+      <button type="submit" style="color: #363636;">Enviar</button>
+    </form>
+  </body>
+</html>
+
