--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <br />
       <button type="submit" style="color: #363636;">Enviar</button>
     </form>
+    <h2 style="color: red;">Os formulários ainda não estão funcionando!</h2>
   </body>
 </html>
 
