--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     h3 {
       color: #B22222;
     }
+    h1 {
+      font-family: 'Comfortaa', cursive;
+    }  
     </style>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1 style="color: #808080;">Matteo K. F. Giuliani</h1>
