--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <title>matteokfg</title>
     <style>
-    h3 {
-      color: #B22222;
-    }
-    h1 {
-      font-family: 'Comfortaa', cursive;
-    }  
+      h3 {
+        color: #B22222;
+      }
+      h1 {
+        font-family: 'Comfortaa', cursive;
+      }  
+      .imagem_maior {
+          width: 700px;
+      }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1 style="color: #808080;">Matteo K. F. Giuliani</h1>
-    <img src="https://www.nasa.gov/sites/default/files/styles/image_card_4x3_ratio/public/thumbnails/image/wff-2018-076-002.jpg"
+    <img class="imagem_maior" src="https://www.nasa.gov/sites/default/files/styles/image_card_4x3_ratio/public/thumbnails/image/wff-2018-076-002.jpg"
     alt="foguete sendo lancado">
     <h2>Esse site é onde mostro como entrar em contato comigo e o que aprendi.</h2>
     <p>Estou estudando HTML5 no <a href="freecodecamp.org" target="_blank">freecodecamp.org</a>, e aprendi algumas tags(Ex:h1, h2, p, img, input, a).
