--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
       }
       h1 {
         font-family: 'Comfortaa', cursive;
+        text-shadow: 5px 1px 0;
       }  
       .imagem_maior {
-          width: 700px;
+        width: 700px;
+        border-color: #C0C0C0;
+        border-width: 5px;
+        border-style: solid;
+        border-radius: 5px;
       }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
