--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       }
       h1 {
         font-family: 'Comfortaa', cursive;
-        text-shadow: 0.1em 0.1em 0 #000000;
+        text-shadow: 2px 2px 0 #000000;
       }  
       .imagem_maior {
         width: 700px;
