--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       }  
       .imagem_maior {
         width: 700px;
-        border-color: #C0C0C0;
+        border-color: #708090;
         border-width: 5px;
         border-style: solid;
         border-radius: 5px;
