--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         border-style: solid;
         border-radius: 5px;
       }
+      input {
+        background-color: #D3D3D3;
+      }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
   </head>
@@ -26,8 +29,8 @@
     alt="foguete sendo lancado">
     <h2>Esse site é onde mostro como entrar em contato comigo e o que aprendi.</h2>
     <p>Estou estudando HTML5 no <a href="freecodecamp.org" target="_blank">freecodecamp.org</a>, e aprendi algumas tags(Ex:h1, h2, p, img, input, a).
-        Mas se você quiser me contratar para mecher no código do seu site preencha isto:</p>
     <form action="">
+      <p>Mas se você quiser me contratar para mecher no código do seu site preencha isto:</p>
       <input type="text" required>:Seu nome</input>
       <br />
       <input type="text" required>:Seu e-mail</input>
