--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         border-style: solid;
         border-radius: 5px;
       }
-      input {
+      form {
         background-color: #D3D3D3;
       }
     </style>
@@ -40,9 +40,9 @@
       <input type="text" placeholder="Escreva aqui" required>:Me conte sobre você e site</input>
       <button type="submit">Enviar</button>
     </form>
-    <p>Além disso sou professor particular.</p>
-    <h3>Se quiser ter aulas comigo, preencha isto:</h3>
     <form action="">
+      <p>Além disso sou professor particular.</p>
+      <h3>Se quiser ter aulas comigo, preencha isto:</h3>
       <input type="text" placeholder="Coloque aqui" required>Nome</input>
       <br />
       <br />
