--- a/index.html
+++ b/index.html
@@ -20,11 +20,18 @@
       form {
         background-color: #D3D3D3;
       }
+      .outra_foto {
+        border-radius: 50%;
+        border-color: #00BFF;
+        border-width: 5px;
+        border-style: solid;
+      }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1 style="color: #808080;">Matteo K. F. Giuliani</h1>
+    <img class="outra_foto" src="https://cdn.britannica.com/s:575x450/01/187101-004-B166322B.jpg" alt="foto de uma coruja">
     <img class="imagem_maior" src="https://www.nasa.gov/sites/default/files/styles/image_card_4x3_ratio/public/thumbnails/image/wff-2018-076-002.jpg"
     alt="foguete sendo lancado">
     <h2>Esse site é onde mostro como entrar em contato comigo e o que aprendi.</h2>
