--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         border-color: #00BFF;
         border-width: 5px;
         border-style: solid;
+        width: 242px;
       }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
