--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <body>
     <h1 style="color: #808080;">Matteo K. F. Giuliani</h1>
     <img class="outra_foto" src="https://cdn.britannica.com/s:575x450/01/187101-004-B166322B.jpg" alt="foto de uma coruja">
+    <a href="contato.html">Contatos</a>
     <img class="imagem_maior" src="https://www.nasa.gov/sites/default/files/styles/image_card_4x3_ratio/public/thumbnails/image/wff-2018-076-002.jpg"
     alt="foguete sendo lancado">
     <h2>Esse site é onde mostro como entrar em contato comigo e o que aprendi.</h2>
