--- a/contato.html
+++ b/contato.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>contatos</title>
   </head>
   <body>
     <h1>Entre em contato aqui</h1>
+    <br />
+    <h3>E-mail:*****@####.com</h3>
+    <br />
+    <h3>Número:(**) @@###&&&%%</h3>
+    <br />
     <a href="index.html">Voltar para a página principal</a>
   </body>
 </html>
