--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <img class="imagem_maior" src="https://www.nasa.gov/sites/default/files/styles/image_card_4x3_ratio/public/thumbnails/image/wff-2018-076-002.jpg"
     alt="foguete sendo lancado">
     <h2>Esse site é onde mostro como entrar em contato comigo e o que aprendi.</h2>
-    <p>Estou estudando HTML5 no <a href="freecodecamp.org/learn" target="_blank">freecodecamp.org</a>, e aprendi algumas tags(Ex:h1, h2, p, img, input, a).
+    <p>Estou estudando HTML5 no <a href="https://www.freecodecamp.org/learn/" target="_blank">freecodecamp.org</a>, e aprendi algumas tags(Ex:h1, h2, p, img, input, a).
     <form action="">
       <p>Mas se você quiser me contratar para mecher no código do seu site preencha isto:</p>
       <input type="text" required>:Seu nome</input>
