--- a/contato.html
+++ b/contato.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+      form {
+        background-color: #D3D3D3;
+      }
+      h3 {
+        color: #B22222;
+      }
+    </style>  
     <title>contatos</title>
   </head>
   <body>
@@ -10,6 +18,43 @@
     <br />
     <h3>Número:(**) @@###&&&%%</h3>
     <br />
+    <form action="">
+      <p>Mas se você quiser me contratar para mecher no código do seu site preencha isto:</p>
+      <input type="text" required>:Seu nome</input>
+      <br />
+      <input type="text" required>:Seu e-mail</input>
+      <br />
+      <input type="text" required>:Seu telefone</input>
+      <br />
+      <input type="text" placeholder="Escreva aqui" required>:Me conte sobre você e site</input>
+      <button type="submit">Enviar</button>
+    </form>
+    <form action="">
+      <p>Além disso sou professor particular.</p>
+      <h3>Se quiser ter aulas comigo, preencha isto:</h3>
+      <input type="text" placeholder="Coloque aqui" required>Nome</input>
+      <br />
+      <br />
+      <input type="text" required>:e-mail</input>
+      <h3>Qual o seu ano?<h3>
+      <label>
+        <input name="ano" type="radio" value="fundamental I">E. Fundamental I
+      </label>
+      <label>
+        <input name="ano" type="radio" value="fundamental II">E. Fundamental II
+      </label>
+      <label>
+        <input name="ano" type="radio" value="medio">E. Medio
+      </label>
+      <br />
+      <br />
+      <input type="text">Descreva voce</input>
+      <br />
+      <input type="text">:De onde você é?</input>
+      <br />
+      <button type="submit" style="color: #363636;">Enviar</button>
+    </form>
+    <h2 style="color: red;">Os formulários ainda não estão funcionando!</h2>
     <a href="index.html">Voltar para a página principal</a>
   </body>
 </html>
