--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
         border-style: solid;
         width: 242px;
       }
+      .aumenta_fonte {
+        font-size: 8px;
+      }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1 style="color: #808080;">Matteo K. F. Giuliani</h1>
-    <a href="contato.html">Contatos</a>
+    <a href="contato.html" class="aumenta_fonte">Contatos</a>
     <img class="outra_foto" src="https://www.nasa.gov/sites/default/files/styles/image_card_4x3_ratio/public/thumbnails/image/wff-2018-076-002.jpg"
     alt="foguete sendo lancado">
     <h2>Esse site é onde mostro como entrar em contato comigo e o que aprendi.</h2>
