--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       .aumenta_fonte {
         font-size: 30px;
       }
+      body {
+        color: #E0FFFF;
+      }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
   </head>
