--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         font-size: 30px;
       }
       body {
-        color: #E0FFFF;
+        background-color: #E0FFFF;
       }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
