--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       }
       body {
         background-color: #E0FFFF;
+        color: #008B8B;
       }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
