Mudei a cor da borda da foto.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       }
       .outra_foto {
         border-radius: 70%;
-        border-color: #00BFF;
+        border-color: #000000;
         border-width: 5px;
         border-style: solid;
         width: 242px;
@@ -33,4 +33,3 @@
     <p>Estou estudando HTML5 no <a href="https://www.freecodecamp.org/learn/" target="_blank">freecodecamp.org</a>, e aprendi algumas tags(Ex:h1, h2, p, img, input, a).
   </body>
 </html>
-
