--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       }
       body {
         background-color: #E0FFFF;
-        color: #00008B;
+        color: #2F4F4F;
       }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
@@ -30,6 +30,8 @@
     <img class="outra_foto" src="https://www.nasa.gov/sites/default/files/styles/image_card_4x3_ratio/public/thumbnails/image/wff-2018-076-002.jpg"
     alt="foguete sendo lancado">
     <h2>Esse site é onde mostro como entrar em contato comigo e o que aprendi.</h2>
-    <p>Estou estudando HTML5 no <a href="https://www.freecodecamp.org/learn/" target="_blank">freecodecamp.org</a>, e aprendi algumas tags(Ex:h1, h2, p, img, input, a).
+    <p>Estou estudando HTML5 no <a href="https://www.freecodecamp.org/learn/" target="_blank">freecodecamp.org</a>, e aprendi algumas tags(Ex:h1, h2, p, img, input, a), e
+      estou usando elas para fazer esse site-teste. Você pode ver os meus projetos ou os que participei em:
+      <a href="https://github.com/matteokfg" target="_blank">github.com/matteokfg</a>.</P>
   </body>
 </html>
