Mudei a cor background.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         font-size: 30px;
       }
       body {
-        background-color: #E0FFFF;
+        background-color: #F8F8FF;
         color: #2F4F4F;
       }
     </style>
