--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       h1 {
         font-family: 'Comfortaa', cursive;
         text-shadow: 2px 2px 0 #000000;
-        text-aling: center;
+        text-align: center;
       }
       .outra_foto {
         border-radius: 70%;
