Troquei para id o estilo do h1, e coloquei um text-align no body.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <title>matteokfg</title>
     <style>
-      h1 {
+      #h1 {
         font-family: 'Comfortaa', cursive;
         text-shadow: 2px 2px 0 #000000;
         text-align: center;
+        color: #808080;
       }
       .outra_foto {
         border-radius: 70%;
@@ -21,12 +22,13 @@
       body {
         background-color: #F8F8FF;
         color: #2F4F4F;
+        text-align: justify;
       }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1 style="color: #808080;">Matteo K. F. Giuliani</h1>
+    <h1 id="h1">Matteo K. F. Giuliani</h1>
     <a href="contato.html" class="aumenta_fonte">Contatos</a>
     <img class="outra_foto" src="https://www.nasa.gov/sites/default/files/styles/image_card_4x3_ratio/public/thumbnails/image/wff-2018-076-002.jpg"
     alt="foguete sendo lancado">
