--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         text-align: center;
         color: #808080;
       }
-      .outra_foto {
+      .foto {
         border-radius: 70%;
         border-color: #000000;
         border-width: 5px;
@@ -30,7 +30,7 @@
   <body>
     <h1 id="h1">Matteo K. F. Giuliani</h1>
     <a href="contato.html" class="aumenta_fonte">Contatos</a>
-    <img class="outra_foto" src="https://www.nasa.gov/sites/default/files/styles/image_card_4x3_ratio/public/thumbnails/image/wff-2018-076-002.jpg"
+    <img class="foto" src="https://www.nasa.gov/sites/default/files/styles/image_card_4x3_ratio/public/thumbnails/image/wff-2018-076-002.jpg"
     alt="foguete sendo lancado">
     <h2>Esse site é onde mostro como entrar em contato comigo e o que aprendi.</h2>
     <p>Estou estudando HTML5 no <a href="https://www.freecodecamp.org/learn/" target="_blank">freecodecamp.org</a>, e aprendi algumas tags(Ex:h1, h2, p, img, input, a), e
