--- a/contato.html
+++ b/contato.html
@@ -19,15 +19,15 @@
     <h3>Número:(**) @@###&&&%%</h3>
     <hr>
     <br />
-    <form action="">
+    <form action="https://script.google.com/macros/s/AKfycbwhfC079nVEkh2Aq6SaxLkwMbNKAPsqvIg8VH8rLw/exec" method="post" class="gform" data-email="example@email.net">
       <p>Mas se você quiser me contratar para mecher no código do seu site preencha isto:</p>
-      <input type="text" required>:Seu nome</input>
+      <input type="text" name="nome" required>:Seu nome</input>
       <br />
-      <input type="text" required>:Seu e-mail</input>
+      <input type="text" name="email" required>:Seu e-mail</input>
       <br />
-      <input type="text" required>:Seu telefone</input>
+      <input type="text" name="telefone" required>:Seu telefone</input>
       <br />
-      <input type="text" placeholder="Escreva aqui" required>:Me conte sobre você e site</input>
+      <input type="text" name="mensagem" placeholder="Escreva aqui" required>:Me conte sobre você e site</input>
       <button type="submit">Enviar</button>
     </form>
     <form action="">
