--- a/index.html
+++ b/index.html
@@ -24,12 +24,23 @@
         color: #2F4F4F;
         text-align: justify;
       }
+      <!-- Aqui é aonde faz o menu ficar na horizontal em vez de ficar no formato de lista -->
+      nav li {
+        display: inline;
+      }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1 id="h1">Matteo K. F. Giuliani</h1>
-    <a href="contato.html" class="aumenta_fonte">Contatos</a>
+    <hr>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="contato.html">Contatos</a></li>
+        </ul>
+      </nav>
+    </header>
     <img class="foto" src="https://www.nasa.gov/sites/default/files/styles/image_card_4x3_ratio/public/thumbnails/image/wff-2018-076-002.jpg"
     alt="foguete sendo lancado">
     <h2>Esse site é onde mostro como entrar em contato comigo e o que aprendi.</h2>
