--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="contato.html">Contatos</a></li>
+          <li><a href="contato.html" class="aumenta_fonte">Contatos</a></li>
         </ul>
       </nav>
     </header>
